# project

./: .env.local  README.md  docker-compose.yml  setup_ip.sh
app/: Dockerfile  Makefile  pyproject.toml
app/src/: main.py
backend/: Dockerfile  Makefile  pyproject.toml
backend/api/: openapi.json
backend/app/: dependencies.py  openapi.py  settings.py  uwsgi.py
backend/app/api/: dependencies.py  router.py
backend/app/artists/: dependencies.py  repository.py  router.py  schemas.py
backend/app/peaks/: dependencies.py  repository.py  router.py  schemas.py  worker.py
backend/app/playlists/: dependencies.py  repository.py  router.py  schemas.py
backend/app/tracks/: dependencies.py  repository.py  router.py  schemas.py
backend/sandbox/: crop.py
nginx/: default.conf
supabase/: config.toml
supabase/migrations/: 20231114181047_add_bucket.sql
test/: README.md  parallel_runner.sh  script.py
ui/: Dockerfile  externals.d.ts  package-lock.json  package.json  tsconfig.json
ui/nginx/: default.conf
ui/public/: index.html
ui/src/: App.tsx  api.ts  index.js  index.tsx  supabase.ts
ui/src/assets/icons/: WaveSvg.jsx  WaveSvg.tsx
ui/src/assets/parser/: LinkCoverMusic.ts
ui/src/components/: AlbumItem.jsx  AlbumItem.tsx  AlbumSet.jsx  AlbumSet.tsx  Auth.tsx  BlockMain.jsx  BlockMain.tsx  BlockMusic.jsx  BlockMusic.tsx  Header.jsx  Header.tsx  YaToken.tsx
ui/src/styles/: App.css
